<resources>
    <string name="app_name">Menio</string>
    <string name="currency_name">تومان</string>
    <string name="yes">بله</string>
    <string name="no">نه</string>
    <string name="thanks">سپاس</string>
    <string name="send_again">کد را دوباره بفرست</string>
    <string name="connection_error">خطای اتصال</string>
    <string name="you_are_offline">شما به اینترنت وصل نیستید</string>
    <string name="retry">تلاش دوباره</string>
    <string name="login">ورود</string>
    <string name="user_name">نام کاربری</string>
    <string name="password">رمز عبور</string>
    <string name="select_branch">انتخاب شعبه</string>
    <string name="confirm">تایید</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="username_reqiered">نام کاربری را وارد کنید!</string>
    <string name="password_reqiered">رمز را وارد کنید!</string>
    <string name="select_menu">انتخاب منو</string>
    <string name="add_to_cart">سفارش</string>
    <string name="enter_password">رمز را وارد کنید</string>
    <string name="wrong_password">رمز اشتباه است</string>
    <string name="back">بازگشت</string>
    <string name="change_password">تغییر رمز عبور</string>
    <string name="logout">خروج از حساب کاربری</string>
    <string name="cancel">لغو</string>
    <string name="save">ذخیره تغییرات</string>
    <string name="total_order_price">مبلغ کل سفارش:  </string>
    <string name="select_your_language">Select Your Language</string>
    <string name="choose">Select</string>
    <string name="choose_en">Select</string>
    <string name="back_en">Back</string>
    <string name="waiter">گارسون!</string>
    <string name="table_number">میز شماره</string>
    <string name="menus">منوی غذاها</string>
    <string name="more_info">اطلاعات بیشتر</string>
    <string name="ok">OK</string>
    <plurals name="order_list">
        <item quantity="one">لیست سفارشات: %d مورد</item>
        <item quantity="other">لیست سفارشات: %d مورد</item>
    </plurals>
</resources>
