<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="50dp"
    android:orientation="vertical"
    tools:context="io.menio.android.activities.Settings.SettingsActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="280dp">

        <LinearLayout
            android:id="@+id/baseLinLay"
            android:layout_width="match_parent"
            android:layout_height="@dimen/menu_item_h"
            android:layout_marginEnd="@dimen/auth_input_h_m"
            android:layout_marginStart="@dimen/auth_input_h_m"
            android:layout_marginTop="20dp"
            android:animateLayoutChanges="true"
            android:orientation="horizontal" />

        <LinearLayout
            android:id="@+id/baseLinLay2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/menu_item_h"
            android:layout_below="@+id/baseLinLay"
            android:layout_marginEnd="@dimen/auth_input_h_m"
            android:layout_marginStart="@dimen/auth_input_h_m"
            android:layout_marginTop="10dp"
            android:animateLayoutChanges="true"
            android:orientation="horizontal" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerInParent="true" />
    </RelativeLayout>

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_toLeftOf="@+id/title"
        android:layout_toRightOf="@+id/price"
        android:fontFamily="@font/theme"
        android:gravity="center"
        android:letterSpacing="0.10"
        android:maxLines="1"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="....................................................................................................................................................................."
        android:textColor="@color/dark_gray"
        android:textSize="16dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/tableIcon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:src="@drawable/ic_table"
            android:tint="@color/dark_gray" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tableNumberTitle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/theme_bold"
            android:gravity="center"
            android:paddingRight="5dp"
            android:text="میز شماره"
            android:textSize="14sp" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/tableNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="18dp"
            android:fontFamily="@font/theme_bold"
            android:gravity="right"
            android:inputType="numberDecimal"
            android:maxLength="3"
            android:minWidth="40dp"
            android:paddingLeft="5dp"
            android:paddingRight="10dp"
            android:paddingTop="4dp"
            android:selectAllOnFocus="true"
            android:text="1"
            android:textColor="@color/dark_gray"
            android:textDirection="ltr"
            android:textSize="15dp" />


    </LinearLayout>

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_toLeftOf="@+id/title"
        android:layout_toRightOf="@+id/price"
        android:fontFamily="@font/theme"
        android:gravity="center"
        android:letterSpacing="0.10"
        android:maxLines="1"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="....................................................................................................................................................................."
        android:textColor="@color/dark_gray"
        android:textSize="16dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:foreground="?android:attr/selectableItemBackground">


            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/theme_bold"
                android:text="@string/logout"
                android:textSize="14sp" />
            <android.support.v7.widget.AppCompatImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:src="@drawable/user_name_logo"
                android:tint="@color/dark_gray" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/changePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:foreground="?android:attr/selectableItemBackground">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/theme_bold"
                android:text="@string/change_password"
                android:textSize="14sp" />

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:src="@drawable/password_logo"
                android:tint="@color/dark_gray" />


        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layoutDirection="rtl">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:backgroundTint="@color/gray"
            android:fontFamily="@font/theme_font_family"
            android:padding="15dp"
            android:text="@string/cancel"
            android:textColor="@color/themeButtonTextColor" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/colorPrimary"
                android:fontFamily="@font/theme_font_family"
                android:padding="15dp"
                android:text="@string/save"
                android:textColor="@color/themeButtonTextColor" />

            <ProgressBar
                android:id="@+id/btnProgress"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignLeft="@+id/save"
                android:layout_alignRight="@+id/save"
                android:layout_centerVertical="true"
                android:elevation="9dp"
                android:visibility="gone" />
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
