<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorAccent2"
    android:layout_height="match_parent"
    tools:context="io.menio.android.activities.menu.CategoryActivity">


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottomLay"
        android:layout_marginTop="180dp"
        android:alpha="1"
        android:clipToPadding="false"
        android:padding="6dp" />


    <io.menio.android.utilities.MaskableFrameLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:mask="@drawable/mask"
        app:porterduffxfermode="DST_IN">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:scaleType="centerCrop"
            android:src="@drawable/hamburger_header" />
    </io.menio.android.utilities.MaskableFrameLayout>

    <RelativeLayout
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp"
        android:background="@drawable/header_circle_shape"
        android:elevation="4dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/headerLogo"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/sample_header_logo"
                android:visibility="gone" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/headerTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/theme_medium"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="-50dp"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="130dp"
        app:cardCornerRadius="25dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:id="@+id/listGridSwitch"
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:layoutDirection="ltr"
            android:background="@color/white"
            android:paddingStart="40dp">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/listSwitch"
                android:layout_width="35dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:paddingBottom="11dp"
                android:paddingTop="11dp"
                android:src="@drawable/ic_dark_list_view"
                android:tint="@color/gray_light" />

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/gridSwitch"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:paddingBottom="13dp"
                android:paddingEnd="10dp"
                android:paddingTop="13dp"
                android:src="@drawable/ic_dark_grid_view"
                android:tint="@color/colorAccent" />
        </LinearLayout>


    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:elevation="5dp"
        android:layoutDirection="ltr"
        android:layout_alignParentLeft="true"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/backToMenus"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:background="@drawable/header_btn_start_color"
            android:paddingStart="20dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/theme"
                android:gravity="center"
                android:text="@string/menus"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_back_to_menus" />

        </LinearLayout>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/language"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/header_btn_middle"
            android:gravity="center"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textAllCaps="true"
            android:textColor="@color/dark_gray"
            android:textSize="14sp"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@drawable/header_btn_middle"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:src="@color/gray_light" />

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/setting"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/header_btn_end"
            android:paddingBottom="15dp"
            android:paddingStart="15dp"
            android:paddingEnd="20dp"
            android:paddingTop="15dp"
            android:src="@drawable/ic_settings_black" />
    </LinearLayout>

    <View
        android:id="@+id/shadow"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/shadow_darker"
        android:elevation="5dp"
        android:visibility="gone" />

    <android.support.v7.widget.CardView
        android:id="@+id/shoppingCartCV"
        android:layout_width="match_parent"
        android:layout_height="@dimen/shoppingcart_popup_h"
        android:layout_marginBottom="28dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:visibility="gone"
        app:cardCornerRadius="25dp"
        app:cardElevation="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_pattern_repeat">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/shoppingCartRV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="72dp" />

            <TextView
                android:id="@+id/shoppingCartDivider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="65dp"
                android:letterSpacing="0.10"
                android:maxLines="1"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:text="-------------------------------------------------------------------------------------------------"
                android:textColor="@color/gray"
                android:textSize="18dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="22dp"
                android:layout_centerHorizontal="true">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:fontFamily="@font/theme_medium"
                    android:gravity="center"
                    android:paddingEnd="5dp"
                    android:text="@string/total_order_price"
                    android:textColor="@color/dark_gray" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/shoppingCartTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:gravity="center"
                    android:paddingStart="5dp"
                    android:fontFamily="@font/theme_medium"
                    android:text=""
                    android:textColor="@color/colorAccent" />
            </LinearLayout>


        </RelativeLayout>


    </android.support.v7.widget.CardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_above="@+id/bottomLay"
        android:background="@drawable/shadow_from_bottom_thin"
        android:elevation="5dp" />

    <RelativeLayout
        android:id="@+id/bottomLay"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:elevation="5dp">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/tableIcon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:padding="5dp"
            android:src="@drawable/ic_table" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tableNumberTitle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/tableIcon"
            android:fontFamily="@font/theme"
            android:gravity="center"
            android:paddingEnd="5dp"
            android:text="@string/table_number"
            android:textSize="12dp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tableNumber"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@+id/tableNumberTitle"
            android:background="@drawable/header_circle_shape"
            android:backgroundTint="@color/gray"
            android:fontFamily="@font/theme_bold"
            android:gravity="center"
            android:text="1"
            android:textColor="@color/white"
            android:textSize="15dp" />


        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/waiterIcon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:padding="5dp"
            android:src="@drawable/ic_waiter" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_toStartOf="@+id/waiterIcon"
            android:fontFamily="@font/theme_medium"
            android:gravity="center"
            android:text="@string/waiter"
            android:textSize="12dp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/shoppingCartBtnLay"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/menu_back_shape"
        android:backgroundTint="@color/shoppingCartBtnBack"
        android:elevation="5dp">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/shoppingCartIcon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="5dp"
            android:padding="14dp"
            android:src="@drawable/ic_spoon" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/shoppingCartTitle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/shoppingCartIcon"
            android:layout_toStartOf="@+id/shoppingCartArrow"
            android:fontFamily="@font/theme"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="10sp" />

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/shoppingCartArrow"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="5dp"
            android:padding="16dp"
            android:src="@drawable/ic_chevron_up" />


    </RelativeLayout>

</RelativeLayout>
